# zomato---milestone---project

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  implementation-plan.md  pyproject.toml  railway.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
data/processed/: restaurants.manifest.json
docs/: context.md  deployment-plan.md  edge-case.md  problemstatement.txt  stitch-design-prompt.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AISummary.tsx  (+10 more)
scripts/: bootstrap_data.py  ingest.py  run_backend.py  run_frontend.py  run_ui.py  test_live_groq.py
src/app/: config.py  main.py
stitch_zomato_ai_restaurant_recommendations/dineai_find_your_next_meal/: code.html
stitch_zomato_ai_restaurant_recommendations/dineai_mobile_experience/: code.html
stitch_zomato_ai_restaurant_recommendations/dineai_personalized_recommendations/: code.html
stitch_zomato_ai_restaurant_recommendations/dineai_status_states/: code.html
stitch_zomato_ai_restaurant_recommendations/gourmet_intelligence/: DESIGN.md
tests/: __init__.py  conftest.py  test_api.py  test_areas.py  test_dedup.py  test_deploy.py  test_filter_service.py  test_llm_client.py  test_orchestrator.py  test_preprocessor.py  test_prompt_builder.py  test_recommendation_engine.py  test_recommendation_merger.py  test_repository.py  test_response_parser.py  test_schema_normalizer.py  test_ui.py
(+37 files in other folders)
